@@ -455,6 +455,7 @@ Currently only meaningful in OpenGL mode.
 Music Volume
 SFX Volume
 Speech Volume
+Gamma Correction
 
 #(SLIDER_0_DESC)
 Sets the music volume.
@@ -464,6 +465,10 @@ Sets the sound effects volume.
 
 #(SLIDER_2_DESC)
 Sets the speech volume.
+
+#(SLIDER_3_DESC)
+Sets the gamma correction.
+May not work on all hardware.
 
 #(BUTTONS)
 Quit Setup Menu
